Add manual updating

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,11 @@
           Last updated at: <%- bill.updatedAt %>
         </div>
       </h1>
-      <div class="ui grid">
-        <div class="center aligned column">
-          <a href="/update" class="ui icon labeled button"><i class="refresh icon"></i>Update</a>
-        </div>
-      </div>
+      <!--<div class="ui grid">-->
+        <!--<div class="center aligned column">-->
+          <!--<a href="/update" class="ui icon labeled button"><i class="refresh icon"></i>Update</a>-->
+        <!--</div>-->
+      <!--</div>-->
       <h3 class="ui center aligned header">
         Plan Breakdown
       </h3>
